Process Hacker

1.3.6.6
 * NEW/IMPROVED:
   * Proper symbol support with dbghelp.dll
   * Private, Shared and Shareable Working Set columns
   * Handle viewing uses KProcessHacker
   * Elevation button in Options now spawns a child options window instead of 
     restarting Process Hacker elevated
   * Aggressive mode (start with "-a" command line option)
 * FIXED:
   * Service properties Key handle leak
   * Handle deletion detection
   * Unhandled exceptions when viewing performance/statistics for a non-existent process
   * Network connections for processes without icons would not be displayed
 * REMOVED:
   * Useless Window menu items (PITA + causes memory leaks due to Microsoft's poor 
     implementation of MenuItem)

1.3.6.5
 * NEW/IMPROVED:
   * #2702907 - "CSR Processes: Enable termination of multiple processes"
   * #2702909 - "CSR Processes: Show process name when confirming termination"
   * #2702911 - "Show process name when terminating process in properties"
   * #2702929 - "Add a Cancel button in Options"
   * #2713088 - "Network: Ctrl+A and Ctrl+C should copy the processes' names"
   * #2714130 - "Option to disable/enable all highlighting colors"
   * Job information
   * "Inject DLL" function
   * Statistics times in System Information and process properties
   * Highlighting system
   * Configurable max. samples and plotter step size
   * Network list with icons
   * Can close multiple handles at once
   * Less memory usage
   * Confirmation dialogs are now consistent and use new Vista interfaces where possible
   * KProcessHacker now retrieves thread start addresses
   * KProcessHacker now performs memory manipulation (allowing the command lines of more 
     processes to be displayed)
   * KProcessHacker now performs process suspending/resuming on Windows Vista
   * Custom module information querying; can now display the modules for protected processes
   * Displays service DLL paths