@@ -22,40 +22,22 @@
 
 using System;
 using System.Collections.Generic;
-using System.Text;
 using System.Windows.Forms;
 using ProcessHacker.UI;
-using System.Runtime.InteropServices;
-using System.Reflection;
 using ProcessHacker.UI.Actions;
 
 namespace ProcessHacker
 {
     public static class ExtendedCmd
     {
-        private static class ThemingScope
-        {
-            [DllImport("kernel32.dll")]
-            private static extern bool ActivateActCtx(IntPtr hActCtx, out IntPtr lpCookie);
-
-            public static void Activate()
-            {
-                IntPtr zero = IntPtr.Zero;
-                Assembly windowsForms = Assembly.GetAssembly(typeof(Control));
-
-                // HACK
-                IntPtr hActCtx = (IntPtr)windowsForms.GetType("System.Windows.Forms.UnsafeNativeMethods", true).
-                    GetNestedType("ThemingScope", BindingFlags.NonPublic | BindingFlags.Static).
-                    GetField("hActCtx", BindingFlags.NonPublic | BindingFlags.Static).GetValue(null);
-
-                if (OSFeature.Feature.IsPresent(OSFeature.Themes))
-                    ActivateActCtx(hActCtx, out zero);
-            }
-        }
-
         public static void Run(IDictionary<string, string> args)
         {
-            ThemingScope.Activate();
+            try
+            {
+                ThemingScope.Activate();
+            }
+            catch
+            { }
 
             if (!args.ContainsKey("-type"))
                 throw new Exception("-type switch required.");
