@@ -8,6 +8,7 @@ Process Hacker
    * Elevation button in Options now spawns a child options window instead of 
      restarting Process Hacker elevated
    * Aggressive mode (start with "-a" command line option)
+   * Better "could not initialize configuration" message for Vista
  * FIXED:
    * Service properties Key handle leak
    * Handle deletion detection
